--- a/profile.html
+++ b/profile.html
@@ -6,16 +6,15 @@
     <body>
             <div class="intro">
                     <div class="typing-demo">
-                        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Play" />
-                        <h1><div class="c1"><div class="type">"info" : {</div></div>
+                        <h1><div class="c1"><div class="type" style="font-size: 2.5vw;">"info" : {</div></div>
                         </br>
-                        <div class="c2"><div class="type2">&emsp; "name" : "Siddhesh Shukla", </div></div>
+                        <div class="c2"><div class="type2" style="font-size: 2.5vw;">&emsp; "name" : "Siddhesh Shukla", </div></div>
                         </br>
-                        <div class="c3"><div class="type3">&emsp; "education" : "Computer Science Undergrad", </div></div>
+                        <div class="c3"><div class="type3" style="font-size: 2.5vw;">&emsp; "education" : "Computer Science Undergrad", </div></div>
                         </br>
-                        <div class="c4"><div class="type4">&emsp; "college": "BITS Pilani, Hyderabad Campus"</div></div>
+                        <div class="c4"><div class="type4" style="font-size: 2.5vw;">&emsp; "college": "BITS Pilani, Hyderabad Campus"</div></div>
                         </br>
-                        <div class="c5"><div class="type5">}</div></div></h1>
+                        <div class="c5"><div class="type5" style="font-size: 2.5vw;">}</div></div></h1>
                     </div>
             </div>
 
