--- a/profile.html
+++ b/profile.html
@@ -6,15 +6,15 @@
     <body>
             <div class="intro">
                     <div class="typing-demo">
-                        <h1><div class="c1"><div class="type" style="font-size: 2.5vw;">"info" : {</div></div>
+                        <h1><div class="c1"><div class="type" style="font-size: min(3.2rem, 2.7vw);">"info" : {</div></div>
                         </br>
-                        <div class="c2"><div class="type2" style="font-size: 2.5vw;">&emsp; "name" : "Siddhesh Shukla", </div></div>
+                        <div class="c2"><div class="type2" style="font-size: min(3.2rem, 2.7vw);;">&emsp; "name" : "Siddhesh Shukla", </div></div>
                         </br>
-                        <div class="c3"><div class="type3" style="font-size: 2.5vw;">&emsp; "education" : "Computer Science Undergrad", </div></div>
+                        <div class="c3"><div class="type3" style="font-size: min(3.2rem, 2.7vw);;">&emsp; "education" : "CS Undergrad", </div></div>
                         </br>
-                        <div class="c4"><div class="type4" style="font-size: 2.5vw;">&emsp; "college": "BITS Pilani, Hyderabad Campus"</div></div>
+                        <div class="c4"><div class="type4" style="font-size: min(3.2rem, 2.7vw);;">&emsp; "college": "BITS Pilani, Hyderabad Campus"</div></div>
                         </br>
-                        <div class="c5"><div class="type5" style="font-size: 2.5vw;">}</div></div></h1>
+                        <div class="c5"><div class="type5" style="font-size: min(3.2rem, 2.7vw);;">}</div></div></h1>
                     </div>
             </div>
 
@@ -129,9 +129,9 @@
                     <!-- <img src="https://neilmehta.netlify.app/hand-reach.5ad4482f.png" alt="" class="projectImg"> -->
                     <div class="portfolio-card">
 						<img src="./projectImgs/trackr.png" alt="Portfolio" class="img-responsive portfolio-img">
-						<div class="portfolio-img-desc">
+						<!-- <div class="portfolio-img-desc">
 							<p>Screenshots</p>
-						</div>			
+						</div>			 -->
 					</div>
 				</div>
             </div>
