--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
                         </br>
                         <div class="c2"><div class="type2" style="font-size: min(3.2rem, 2.7vw);;">&emsp; "name" : "Siddhesh Shukla", </div></div>
                         </br>
-                        <div class="c3"><div class="type3" style="font-size: min(3.2rem, 2.7vw);;">&emsp; "education" : "CS Undergrad", </div></div>
+                        <div class="c3"><div class="type3" style="font-size: min(3.2rem, 2.7vw);;">&emsp; "education" : "Computer Science Undergrad", </div></div>
                         </br>
                         <div class="c4"><div class="type4" style="font-size: min(3.2rem, 2.7vw);;">&emsp; "college": "BITS Pilani, Hyderabad Campus"</div></div>
                         </br>
