--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>My Profile</title>
+        <title>Siddhesh Shukla's Website</title>
         <link rel="stylesheet" href="profile.css">
     </head>
     <body>
