--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <div class="intro">
-            <div class="typing-demo">
+            <div class="typingDemo">
                 <h1><div class="c1"><div class="type" style="font-size: min(3.2rem, 2.7vw);">"info" : {</div></div>
                 </br>
                 <div class="c2"><div class="type2" style="font-size: min(3.2rem, 2.7vw);;">&emsp; "name" : "Siddhesh Shukla", </div></div>
@@ -60,16 +60,16 @@
                     </p>
                     <a href="https://github.com/Siddhesh-Shukla/Dextreous-Hand-Manipulation"><button class="btn"><span>Source Code</span></button></a>
                 </div>
-                <div class=" portfolio-card">
-                    <img src="./projectImgs/dextrousHand.png" alt="Portfolio" class="img-responsive portfolio-img">
+                <div class="projectCard">
+                    <img src="./projectImgs/dextrousHand.png" alt="" class="project-img">
                     <!-- <div class="portfolio-img-desc">
                         <p>Lorem ipsum dolor sit amet</p>
                     </div>			 -->
                 </div>
             </div>
             <div class="projectDiv">
-                <div class="portfolio-card">
-                    <img src="./projectImgs/fakenewsdetection.jpg" alt="Portfolio" class="img-responsive portfolio-img">
+                <div class="projectCard">
+                    <img src="./projectImgs/fakenewsdetection.jpg" alt="" class="project-img">
                     <!-- <div class="portfolio-img-desc">
                         <p>Lorem ipsum dolor sit amet</p>
                     </div>			 -->
@@ -92,16 +92,16 @@
                     </p>
                     <a href="https://github.com/Siddhesh-Shukla/InformationRetrieval"><button class="btn"><span>Source Code</span></button></a>
                 </div>
-                <div class="portfolio-card">
-                    <img src="./projectImgs/ir.jpg" alt="Portfolio" class="img-responsive portfolio-img">
+                <div class="projectCard">
+                    <img src="./projectImgs/ir.jpg" alt="" class="project-img">
                     <!-- <div class="portfolio-img-desc">
                         <p>Lorem ipsum dolor sit amet</p>
                     </div>			 -->
                 </div>
             </div>
             <div class="projectDiv">
-                <div class="portfolio-card">
-                    <img src="./projectImgs/dbms.png" alt="Portfolio" class="img-responsive portfolio-img">
+                <div class="projectCard">
+                    <img src="./projectImgs/dbms.png" alt="" class="project-img">
                     <!-- <div class="portfolio-img-desc">
                         <p>Lorem ipsum dolor sit amet</p>
                     </div>			 -->
@@ -124,8 +124,8 @@
                     </p>
                     <a href="https://github.com/Siddhesh-Shukla/TrackR"><button class="btn"><span>Source Code</span></button></a>
                 </div>
-                <div class="portfolio-card">
-                    <img src="./projectImgs/trackr.png" alt="Portfolio" class="img-responsive portfolio-img">
+                <div class="projectCard">
+                    <img src="./projectImgs/trackr.png" alt="" class="project-img">
                     <!-- <div class="portfolio-img-desc">
                         <p>Screenshots</p>
                     </div>			 -->
@@ -148,4 +148,5 @@
 
     </body>
 </html>
+
 
