--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     </ul>
 
                     <ul>
-                        The objective was to extract information from the clinical notes and map it to relevant SNOMED codes, then
-                        construct a SNOMED2VEC inspired by WORD2VEC to convert the extracted SNOMED codes into vectors which
-                        are then used in conjunction with other relevant information, such as days of stay last time and family history
-                        to predict DRG. 
+                        Created a pipeline to process a patient's written clinical notes in order to create an early prediction of Diagnostic Related Groups (DRGs) 
+                        and estimate hospital costs.Extracted information from the clinical notes and mapped it to appropriate SNOMED codes, then developed a 
+                        SNOMED2VEC model whose outputs are then utilised in conjunction with other pertinent information, such as days of stay during the 
+                        previous hospitalisation and family history, to forecast the DRG value.
                     </ul>   
                 </p>
             </div>
