--- a/index.html
+++ b/index.html
@@ -94,6 +94,24 @@
           </li>
 
         </ul>
+        
+        <div class="separator"></div>
+
+        <ul class="social-list">
+
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/siddhesh-shukla-a63824212/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://github.com/Siddhesh-Shukla/" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+
+        </ul>
 
       </div>
 
