--- a/index.html
+++ b/index.html
@@ -201,10 +201,6 @@
               <h4 class="h4 timeline-item-title">Here Technologies, Mumbai— Software Developer Intern</h4>
 
               <span>Jan, 2023 — Present</span>
-
-              <p class="timeline-text">
-                As a member of the International Source Seeding Team within the Unimap product pipeline, my responsibilities involve developing new adapters and modifying existing adapters to meet the specific needs of clients such as Volkswagen and BMW.
-              </p>
               <p class="timeline-text">
                 Tech Stack - JAVA, Scala, Maven, Spark, IntelliJ
               </p>
@@ -218,10 +214,10 @@
               <span>Jan, 2022 — May, 2022</span>
 
               <p class="timeline-text">
-                Involved in creating a NLP model to process the written clinical notes and patient’s history to make an early prediction of Diagnostic Related Groups (DRGs) and estimate the hospital cost.
+                Automating the prediction of Diagnostic Related Groups (DRGs) and estimating hospital costs based on clinical notes and patient history during admission.
               </p>
               <p class="timeline-text">
-                Libraries Used - Pytorch, Scikit, Pandas, Numpy, Sklearn, NLTK
+                Libraries - Pytorch, Scikit, Pandas, Numpy, NLTK
               </p>
 
             </li>
