--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 Automating the prediction of Diagnostic Related Groups (DRGs) and estimating hospital costs based on clinical notes and patient history during admission.
               </p>
               <p class="timeline-text">
-                Libraries - Pytorch, Scikit, Pandas, Numpy, NLTK
+                Natural Language Processing, Deep Learning
               </p>
 
             </li>
