--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
               <span>Jan, 2023 — Present</span>
               <p class="timeline-text">
-                Tech Stack - JAVA, Scala, Maven, Spark, IntelliJ
+                Tech Stack - JAVA, Scala, Maven, Spark
               </p>
 
             </li>
@@ -232,7 +232,7 @@
                 Contributed by creating a job portal where candidates can apply for vacant job positions.
               </p>
               <p class="timeline-text">
-                TechStack - MERN Stack, Figma, Vscode
+                TechStack - MERN Stack, Figma
               </p>
 
             </li>
